// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`verifyRequiredSecrets should throw if all of the required secrets are missing values 1`] = `
"The following secrets are required for this GitHub Action to run:
- GITHUB_EVENT_NAME
- GITHUB_REF
- GITHUB_REPOSITORY
- GITHUB_SHA
- GITHUB_TOKEN
- GITHUB_WORKSPACE"
`;

exports[`verifyRequiredSecrets should throw if none of the required secrets exist 1`] = `
"The following secrets are required for this GitHub Action to run:
- GITHUB_EVENT_NAME
- GITHUB_REF
- GITHUB_REPOSITORY
- GITHUB_SHA
- GITHUB_TOKEN
- GITHUB_WORKSPACE"
`;

exports[`verifyRequiredSecrets should throw if some of the required secrets are missing values 1`] = `
"The following secrets are required for this GitHub Action to run:
- GITHUB_EVENT_NAME
- GITHUB_REF
- GITHUB_SHA"
`;
